	- removed bacus.pt from host list in t/handle/external/10_destroy.t,
	since it seems no longer to respond. Reported by tco2.
	- changed t/handle/external/10_destroy.t so this list of URIs to be
	tested can be configured with environment variable SSLEAY_URIS, a
	colon separated list of host names. Suggested by tco2.
	- changed t/handle/external/50_external.t and t/external/08_external.t
	so this list of sites to be
	tested can be configured with environment variable SSLEAY_SITES, a
	colon separated list of host names. Suggested by tco2.
	- Fixed doucumentation in README of how to use OPENSSL_PREFIX
	environment variable to control the location of openssl. Reported by
	"Quanah Gibson-Mount via RT".
	- Don't use Module::Installs auto_install.
	- Bind NID_ and GEN_ constants.
	- Default to not running external tests.

1.34 24.07.2008
	- Fixed problem with X509_get_subjectAltNames, where some types of Alt
	Name (eg DIRNAMEs) were not properly handled, resulting in seg faults.
	Reported by Achim Grolms.
	- Added support for ENGINE_load_builtin_engines and
	ENGINE_register_all_complete in order to enable built-in OpenSSL
	crypto engines for hardware acceleration etc.
	- Added support for ENGINE_by_id and ENGINE_set_default, required
	to enable Sun crypto acceleration

1.35 25.07.208
	- Fix test plan for autoload.t if Test::Exception isn't available.
	- Skip rsa_generate_key.t if Test::Exception isn't available.

????
	- Fix problems with building on GNU/kFreeBSD, to do with use of pack
	instread of sockaddr_in. Patched by Debian Perl Group.
	- SSL_set_session_secret_cb required for EAP-FAST is now enabled for both 
	SSL_F_SSL_SET_HELLO_EXTENSION and
	SSL_F_SSL_SET_SESSION_TICKET_EXT. The name of this #define
	changed after 0.9.8i. SSL_set_hello_extension is not available after
	0.9.8i.
	- Added SSL_CTX_get_client_CA_list sk_X509_NAME_free sk_X509_NAME_num
	sk_X509_NAME_value SSL_get_client_CA_list, from patch provided by
	Joerg Schneider
#EOF